--- a/meuPerfil.css
+++ b/meuPerfil.css
@@ -83,7 +83,7 @@ p {
 }
 
 .subtitulo-portfolio {
-  padding: 10px 20px;
+  padding: 10px 0;
   margin: 0;
   background-color: black;
   color: #11a36a;
@@ -191,7 +191,7 @@ a {
 }
 
 #redes {
-  padding: 10px 20px;
+  padding: 10px 0;
   margin: 0;
   background-color: black;
   color: #11a36a;
@@ -291,28 +291,37 @@ a {
   padding: 50px 0;
   text-align: center;
   max-width: 100%;
+  margin: auto;
 }
 
 .componentes1 {
   background-color: #11a36a;
   line-height: 25px;
-  width: 30%;
-  margin: 0 20px;
-  text-align: center;
+  width: 300px;
+  margin: 20px 40px;
+  text-align: left;
   display: inline-block;
-  padding: 20px 40px;
+  padding: 20px 20px;
+  position: relative;
+  bottom: 20px;
+}
+
+.componentes1 .lista1, .hard {
+  margin-left: 70px;
 }
 
 .componentes2 {
   background-color: #11a36a;
   line-height: 25px;
-  width: 30%;
-  margin: 0 20px;
-  text-align: center;
+  width: 300px;
+  margin: 20px 40px;
+  text-align: left;
   display: inline-block;
-  padding: 20px 40px;
-  position: relative;
-  bottom: 30px;
+  padding: 20px 20px;
+}
+
+.grupo3 .lista2, .soft {
+  margin-left: 50px;
 }
 
 .hard-skills {
@@ -342,6 +351,8 @@ a {
   background-color: black;
   color: #00d382;
   padding: 10px 0;
+  width: 100%;
+  margin: 0;
 }
 
 .botao2:hover {
