--- a/TRYBE-PROJETOS/Projeto5.5_Pixel-Art/style.css
+++ b/TRYBE-PROJETOS/Projeto5.5_Pixel-Art/style.css
@@ -44,9 +44,9 @@ body {
   flex-flow: row nowrap;
   justify-content: center;
   align-items: baseline;
-  /* background-color: red; */
   width: 70%;
   text-align: center;
+  /* background-color: red; */
 }
 
 .head-title-container h1 {
@@ -152,6 +152,7 @@ body {
 
 .button-create-board {
   background-color: #2b2e53;
+  margin: 10px;
   color: #f2f2f2;
   font-weight: 700;
   font-size: 15px;
@@ -173,6 +174,10 @@ body {
   margin: 20px auto 0;
   text-align: center;
   font-family: pixel-strong, sans-serif;
+}
+
+.button-move-container {
+  color: black;
 }
 
 .clear-board {
@@ -223,16 +228,16 @@ body {
   box-shadow: 0 0 10px black;
   box-sizing: border-box;
   max-width: 100%;
-  /* display: table; */
+  display: table;
 }
 
 .line {
   box-sizing: border-box;
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  align-items: center;
-  /* display: table-row; */
+  /* display: flex; */
+  /* flex-flow: row wrap; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  display: table-row;
 }
 
 .pixel {
@@ -240,7 +245,7 @@ body {
   border: 1px solid black;
   box-sizing: border-box;
   cursor: pointer;
-  /* display: table-cell; */
+  display: table-cell;
 }
 
 .footer-container {
