--- a/TRYBE-PROJETOS/Projeto5.5_Pixel-Art/style.css
+++ b/TRYBE-PROJETOS/Projeto5.5_Pixel-Art/style.css
@@ -104,6 +104,7 @@ body {
   color: #291711;
   font-size: 40px;
   text-align: center;
+  margin-bottom: 15px;
   /* background-color: red; */
 }
 
@@ -152,7 +153,7 @@ body {
 
 .button-create-board {
   background-color: #2b2e53;
-  margin: 10px;
+  margin: 5px;
   color: #f2f2f2;
   font-weight: 700;
   font-size: 15px;
