--- a/TRYBE-PROJETOS/Projeto5.5-Meme-Generator/style.css
+++ b/TRYBE-PROJETOS/Projeto5.5-Meme-Generator/style.css
@@ -25,7 +25,7 @@ html {
 body {
   background-color: black;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   max-height: max-content;
   display: flex;
   flex-flow: column nowrap;
@@ -320,8 +320,8 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  width: 100%;
-  background-color: black;
+  width: 0 100%;
+  /* background-color: black; */
 }
 
 .footer-container h2 {
