--- a/TRYBE-PROJETOS/Projeto5.5-Meme-Generator/style.css
+++ b/TRYBE-PROJETOS/Projeto5.5-Meme-Generator/style.css
@@ -18,14 +18,14 @@
 
 html {
   width: 100%;
-  /* height: 100%; */
+  height: 100%;
   max-height: max-content;
 }
 
 body {
   background-color: black;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   max-height: max-content;
   display: flex;
   flex-flow: column nowrap;
