--- a/TRYBE-PROJETOS/Projeto6.6-Facebook/style.css
+++ b/TRYBE-PROJETOS/Projeto6.6-Facebook/style.css
@@ -1,9 +1,17 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-image: linear-gradient(white, rgba(115, 120, 150, 0.466));
   box-sizing: border-box;
   height: 100vh;
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
 }
 
 .top-bar {
@@ -11,7 +19,7 @@ body {
   background-color: rgb(66, 103, 178);
   display: flex;
   height: 80px;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
 }
 
@@ -41,7 +49,7 @@ body {
 }
 
 .form-control {
-  align-self: flex-end;
+  align-self: center;
 }
 
 .button-login {
@@ -53,7 +61,7 @@ body {
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
-  margin: 20px 0;
+  margin: 20px 30px;
 }
 
 .left-content {
@@ -160,4 +168,34 @@ body {
 
 .required-alert {
   color: red;
+}
+
+.footer-container {
+  background-color: rgb(66, 103, 178);
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 10px;
+  /* width: 100%; */
+}
+
+.footer-h2 {
+  color:  white;
+  font-size: small;
+  margin: 5px;
+  text-align: center;
+  /* width: 90%; */
+  /* padding: 10px 0; */
+  /* background-color: red; */
+}
+
+.footer-p {
+  color:  white;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  width: 80%
+  /* background-color: red; */
 }
