--- a/TRYBE-PROJETOS/Projeto6.6-Facebook/style.css
+++ b/TRYBE-PROJETOS/Projeto6.6-Facebook/style.css
@@ -155,6 +155,12 @@ body {
   margin: 0 5px;
 }
 
+.radio-gender {
+  text-align: center;
+  align-items: center;
+  display: flex;
+}
+
 .button-register {
   background-color: green;
   border-radius: 10px;
@@ -179,6 +185,10 @@ body {
   margin: 0;
   padding: 10px;
   /* width: 100%; */
+}
+
+input::placeholder {
+  padding: 0 10px;
 }
 
 .footer-h2 {
