--- a/TRYBE-PROJETOS/Projeto5.5-To-do-List/style.css
+++ b/TRYBE-PROJETOS/Projeto5.5-To-do-List/style.css
@@ -1,7 +1,139 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: rgb(194, 194, 194);
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+}
+
+.header-container {
+  background-color: black;
+}
+
+.container {
+  background-color: #f5f5f5;
+  border-radius: 30px;
+  box-shadow: 0 0 10px black;
+  margin: 40px auto;
+  width: max-content;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.first-section {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+}
+
+.button-group {
+  /* background-color: red; */
+  display: flex;
+  flex-flow: column nowrap;
+  width: max-content;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+}
+
+.btn {
+  margin: 5px;
+  width: 100px;
+  font-size: 14px;
+}
+
+.last-button {
+  width: 100%;
+}
+
+.list-container {
+  background-image: url(./imgs/fundo.png);
+  background-size: cover;
+  background-position: right;
+  border: 2px solid purple;
+  width: 500px;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+  border-radius: 30px;
+  padding: 0;
+}
+
+.input-text {
+  width: 250px;
+  padding: 5px;
+  box-shadow: 2px 2px 5px black;
+  text-align: center;
+  margin: 20px;
+}
+
+.ol-container {
+  text-align: center;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  /* width: 100%; */
+  /* margin: 0 60px; */
+}
+
 .li {
-  font-size: 40px;
+  font-size: 25px;
+  text-align: left;
+  /* max-width: 90%; */
 }
 
 .completed {
   text-decoration: line-through solid black;
+}
+
+.second-section {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  /* background-color: blue; */
+  width: 100%;
+}
+
+.logo-container {
+  /* background-color: red; */
+  position: relative;
+  bottom: 20px;
+  opacity: 0.5;
+}
+
+.rulers-container {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  /* background-color: green; */
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.footer-container {
+  background-color: black;
+  color: white;
+  text-align: center;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  margin: 0;
+}
+
+.footer-container p {
+  margin: 0;
 }
