--- a/NLW/src/views/create-orphanage.html
+++ b/NLW/src/views/create-orphanage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cadastre um Orfanato | HAPPY</title>
+    <title>Cadastre um orfanato | HAPPY</title>
     <link rel="icon" href="./public/images/logo-icon.png" />
     <link
       rel="stylesheet"
