server rodando no backend - Projeto HAPPY - 16/10/2020

--- a/NLW/Projeto-Happy/src/views/index.html
+++ b/NLW/Projeto-Happy/src/views/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HAPPY</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
-    <link rel="icon" href="./public/images/logo-icon.png" />
-    <link rel="stylesheet" href="./public/css/style.css" />
-    <link rel="stylesheet" href="./public/css/animations.css" />
-    <link rel="stylesheet" href="./public/css/page-landing.css" />
+    <link rel="icon" href="/images/logo-icon.png" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/animations.css" />
+    <link rel="stylesheet" href="/css/page-landing.css" />
   </head>
   <body>
     <div class="page-landing">
       <div class="page-subcontainer">
         <header class="head-container">
-          <img src="./public/images/logo.svg" alt="Logomarca de Happy" class="animate-up" />
+          <img src="/images/logo.svg" alt="Logomarca de Happy" class="animate-up" />
 
           <div class="location-container animate-up">
             <strong>Paraiba</strong>
@@ -28,7 +28,7 @@
           <section class="invited-container">
             <p class="animate-up">Visite orfanatos e mude o dia de muitas crianças</p>
             <a href="./localization.html" title="Visite orfanatos" class="button-container animate-up">
-              <img src="./public/images/arrow.svg" alt="Ir para o mapa" class="image-Button"/>
+              <img src="/images/arrow.svg" alt="Ir para o mapa" class="image-Button"/>
             </a>
           </section>
         </main>
