--- a/NLW/Projeto-Happy/src/views/create-orphanage.hbs
+++ b/NLW/Projeto-Happy/src/views/create-orphanage.hbs
@@ -34,7 +34,7 @@
       </aside>
 
       <main class="animate-opacity width-sidebar">
-        <form action="">
+        <form action="save-orphanage" method="POST">
           <fieldset>
             <legend>Dados</legend>
 
@@ -70,7 +70,7 @@
 
               <div class="images-upload" id="images">
                 <div class="new-upload">
-                  <input type="text" name="images" placeholder="Cole o link da foto aqui" required/>
+                  <input type="url" name="images" placeholder="Cole o link da foto aqui" required/>
                   <span class="removeImg" onclick="removeImg(event)"><img src="/images/close-img.svg" alt="delete imagem" /></span>
                 </div>
               </div>
