--- a/NLW/Projeto-Happy/src/views/create-orphanage.hbs
+++ b/NLW/Projeto-Happy/src/views/create-orphanage.hbs
@@ -61,8 +61,8 @@
             </div>
 
             <div class="input-block">
-              <label for="Whatsapp">Número de Whatsapp</label>
-              <input type="text" name="Whatsapp" id="Whatsapp" required/>
+              <label for="whatsapp">Número de Whatsapp</label>
+              <input type="text" name="whatsapp" id="whatsapp" required/>
             </div>
 
             <div class="input-block images">
@@ -90,13 +90,13 @@
             </div>
 
             <div class="input-block">
-              <label for="opening-hours">Horário das visitas</label>
-              <input type="text" name="opening-hours" id="opening-hours" required/>
+              <label for="opening_hours">Horário das visitas</label>
+              <input type="text" name="opening_hours" id="opening_hours" required/>
             </div>
 
             <div class="input-block">
-              <label for="open-on-weekends">Atende fim de semana?</label>
-              <input type="hidden" name="open-on-weekends" id="open-on-weekends" value="1" required/>
+              <label for="open_on_weekends">Atende fim de semana?</label>
+              <input type="hidden" name="open_on_weekends" id="open_on_weekends" value="1" required/>
 
               <div class="button-selected">
                 <button type="button" class="active">Sim</button><button type="button">Não</button>
