--- a/NLW/Projeto-Happy/src/views/orphanages.hbs
+++ b/NLW/Projeto-Happy/src/views/orphanages.hbs
@@ -11,10 +11,10 @@
    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/animations.css" />
-    <link rel="stylesheet" href="/css/localization.css" />
+    <link rel="stylesheet" href="/css/orphanages.css" />
   </head>
   <body>
-    <div class="page-localization-container">
+    <div class="page-orphanages-container">
       <aside class="aside-container animate-right">
         <header class="header-container">
           <img src="/images/map-marker.svg" alt="logo happy" />
@@ -40,13 +40,13 @@
       </div>
 
       <div class="map-container animate-opacity" id="mapid"></div>
-      <a href="/create-orphanage" class="create-localization animate-up" title="Cadastre um orfanato">
+      <a href="/create-orphanage" class="create-orphanages animate-up" title="Cadastre um orfanato">
         <img src="/images/plus.svg" alt="Criar um orfanato">
       </a>
     </div>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
-    <script src="/scripts/localization.js"></script>
+    <script src="/scripts/orphanages.js"></script>
   </body>
 </html>
