--- a/NLW/Projeto-Happy/src/views/index.hbs
+++ b/NLW/Projeto-Happy/src/views/index.hbs
@@ -27,7 +27,7 @@
 
           <section class="invited-container">
             <p class="animate-up">Visite orfanatos e mude o dia de muitas crianças</p>
-            <a href="/localization" title="Visite orfanatos" class="button-container animate-up">
+            <a href="/orphanages" title="Visite orfanatos" class="button-container animate-up">
               <img src="/images/arrow.svg" alt="Ir para o mapa" class="image-Button"/>
             </a>
           </section>
